more image stretch fixes

--- a/style.css
+++ b/style.css
@@ -763,7 +763,7 @@ button, input[type=button], input[type=submit], input[type=reset] {
   }
 
   main div:nth-of-type(2) {
-    width: 100%
+    width: 100%;
     height: auto;
   }
 
